<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#382A60"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#ffff">

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_first_name"
            android:textColor="#ffff"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:nextFocusForward="@id/edit_text_phone_number"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phone_number"
        android:layout_width="match_parent"
        android:textColorHint="#ffff"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_phone_number"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:textColor="#ffff"
            android:layout_height="wrap_content"
            android:hint="@string/your_phone_number"
            android:inputType="number"
            android:nextFocusDown="@string/your_email_id"
            android:textSize="20sp"
            tools:ignore="TextFields" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email_id"
        android:layout_width="match_parent"
        android:textColorHint="#ffff"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_email_id"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/spinner_city"
            android:hint="@string/your_email_id"
            android:textColor="#ffff"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/spinner_city"
        android:layout_width="match_parent"
        android:textColorHint="#ffff"
        android:layout_height="50dp"
        android:entries="@array/city_arrays"
        android:layout_marginTop="10dp"
        android:prompt="@string/city_prompt"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up"
        android:textSize="20sp"/>

</LinearLayout>
